--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,96 @@
+@import url('https://fonts.googleapis.com/css?family=Roboto|Source+Sans+Pro&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Arvo&display=swap');   
 
-body {
-  font-size: 16px;
+body{
+  background-color: #ffffff;
 }
 
-ul li{
+header{
+  background-color:#0e0d54;
+  color: #ffffff;
+  padding-bottom: 1px;
+  margin-bottom: 10px;
+}
+
+ul li {
   display: inline;
   list-style: none;
+  margin-left: 2%;
+  letter-spacing: 2px;
+}
+
+ul{
+  margin-left: -3%;
+}
+
+nav{
+  padding: 1.1em;
+  padding-top: 10px;
+  padding-bottom: 1px;
+  background-color:#000000;
+  margin-top: -1%;   
+}
+
+nav a{
+  color: #ffffff;
+  font-size: 20px;
+  font-family: 'Roboto', sans-serif;
+  font-weight: bold;
+  font-variant: small-caps;
+  text-decoration: none;  
+}
+
+a.grow:hover {
+  background-color: #a2bee6;
+  padding: 0.4em;
+  border-radius: 10% ;
+  color: #0e0d54;
+}
+
+
+
+.Logo-box h3{
+  margin-top: -2%;
+  margin-left: 6%;
+  margin-bottom: 22px;
+  font-family: 'Roboto', sans-serif;
+  letter-spacing: 3px;
+}
+
+picture img{
+  margin-top: -1%;
+  width: 100%;
+  height: 200px;
+}
+
+main .meio img{
+  border-radius: 50%;
+  margin-top: -60px;
+  margin-bottom: -16px;
+  margin-top: -30px;;
+    
+}
+
+main .meio{
+  background: url("https://cdn.pixabay.com/photo/2017/03/11/13/19/oilseed-rape-2135026_960_720.jpg");
+  background-repeat: no-repeat;
+  background-size: 100%;
+  padding: 1.1em;
+  font-size: 25px;
+  text-align: center;
+  font-family: 'Arvo',  sans-serif;
+  color: #e8f0f7;
+}
+
+
+footer{
+  background-color :#0e0d54;
+  color: #ffffff;
+  font-size: 20px;
+  padding: 0.1em;
+}
+
+footer p{
+  margin-left: 2%;
+  font-family: Georgia, 'Times New Roman', Times, serif;
 }
