--- a/css/style.css
+++ b/css/style.css
@@ -1,96 +1,112 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto|Source+Sans+Pro&display=swap');
-@import url('https://fonts.googleapis.com/css?family=Arvo&display=swap');   
+@import url('https://fonts.googleapis.com/css?family=Arvo&display=swap');
 
-body{
-  background-color: #ffffff;
+body {
+  font-size: 16px;
+  font-family: Roboto, 'Source Sans Pro', sans-serif;
 }
 
-header{
-  background-color:#0e0d54;
+header {
+  background-color: #01013C;
   color: #ffffff;
-  padding-bottom: 1px;
-  margin-bottom: 10px;
+  display: flex;
+  align-items: center;
 }
 
-ul li {
-  display: inline;
-  list-style: none;
-  margin-left: 2%;
-  letter-spacing: 2px;
+header a {
+  text-decoration: none;
 }
 
-ul{
-  margin-left: -3%;
+header img {
+  margin: 10px;
 }
 
-nav{
-  padding: 1.1em;
-  padding-top: 10px;
-  padding-bottom: 1px;
-  background-color:#000000;
-  margin-top: -1%;   
-}
-
-nav a{
-  color: #ffffff;
-  font-size: 20px;
-  font-family: 'Roboto', sans-serif;
-  font-weight: bold;
-  font-variant: small-caps;
-  text-decoration: none;  
-}
-
-a.grow:hover {
-  background-color: #a2bee6;
-  padding: 0.4em;
-  border-radius: 10% ;
-  color: #0e0d54;
-}
-
-
-
-.Logo-box h3{
-  margin-top: -2%;
-  margin-left: 6%;
-  margin-bottom: 22px;
-  font-family: 'Roboto', sans-serif;
+h1 {
+  font-size: 1.3rem;
   letter-spacing: 3px;
 }
 
-picture img{
-  margin-top: -1%;
+h2 {
+  margin: 0 0 7px 0;
+  font-family: Arvo, Arial, Helvetica, sans-serif;
+  font-size: 2rem;
+}
+
+nav {
+  background-color: #000000;
+}
+
+nav ul {
+  display: block;
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+}
+
+nav a {
+  display: block;
+  padding: 10px 20px;
+  color: #ffffff;
+  font-size: 1.2rem;
+  font-weight: 700;
+  font-variant: small-caps;
+  text-decoration: none;
+  letter-spacing: 1.5pt;
+}
+
+nav a:hover {
+  background-color: #a2bee6;
+  padding: 0.4em;
+  border-radius: 10%;
+  color: #01013C;
+}
+
+.hero img {
   width: 100%;
-  height: 200px;
+  height: auto;
 }
 
-main .meio img{
-  border-radius: 50%;
-  margin-top: -60px;
-  margin-bottom: -16px;
-  margin-top: -30px;;
-    
-}
-
-main .meio{
-  background: url("https://cdn.pixabay.com/photo/2017/03/11/13/19/oilseed-rape-2135026_960_720.jpg");
+.meio {
+  background-image: url("../images/logos/oilseedscape.jpg");
   background-repeat: no-repeat;
   background-size: 100%;
   padding: 1.1em;
   font-size: 25px;
   text-align: center;
-  font-family: 'Arvo',  sans-serif;
-  color: #e8f0f7;
+  font-family: 'Arvo', sans-serif;
+  color: #000;
+}
+
+.meio img {
+  border-radius: 50%;
 }
 
 
-footer{
-  background-color :#0e0d54;
+footer {
+  background-color: #01013C;
   color: #ffffff;
-  font-size: 20px;
-  padding: 0.1em;
+  font-size: 1.1rem;
+  padding: 1rem;
 }
 
-footer p{
+footer p {
   margin-left: 2%;
   font-family: Georgia, 'Times New Roman', Times, serif;
+}
+
+@media screen and (min-width: 500px) {
+  nav ul {
+    display: flex;
+    align-items: center;
+  }
+
+  .meio h2 {
+    color: #e8f0f7;
+  }
+}
+
+@media screen and (min-width: 1060px) {
+  .meio h3 {
+    color: #e8f0f7;
+  }
 }
