--- a/css/style.css
+++ b/css/style.css
@@ -72,14 +72,14 @@ main .meio img{
 }
 
 main .meio{
-  background: url("https://cdn.pixabay.com/photo/2017/03/11/13/19/oilseed-rape-2135026_960_720.jpg");
+  background: url("https://www.publicdomainpictures.net/pictures/30000/nahled/this-winter-135439096360z.jpg");
   background-repeat: no-repeat;
   background-size: 100%;
   padding: 1.1em;
   font-size: 25px;
   text-align: center;
   font-family: 'Arvo',  sans-serif;
-  color: #e8f0f7;
+  color: #000000;;
 }
 
 
