--- a/css/style.css
+++ b/css/style.css
@@ -449,4 +449,9 @@ Codition for Small Screens
   margin-left: 0;
   display: inline-block;
 }
+
+.pic-Grad6{
+  margin-left: 0;
+  display: inline-block;
+}
 }
