--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,4 @@
-@import url('https://fonts.googleapis.com/css?family=Roboto|Source+Sans+Pro&display=swap');
-@import url('https://fonts.googleapis.com/css?family=Arvo&display=swap');
-@import url('https://fonts.googleapis.com/css?family=PT+Sans+Narrow:700&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Roboto|Source+Sans+Pro|Arvo|PT+Sans+Narrow:700&display=swap');
 
 body {
   font-size: 16px;
